[project]
name = "atumm-service-user"
version = "0.1.0"
description = "User Webservice"
authors = [
    {name = "Omars", email = "omar@atumm.org"},
]
dependencies = [
    "pydantic>=1.10,<3.0",
    "atumm-core @ git+https://github.com/atumm-ra/atumm-core.git@dev",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
